crates/eure-macros/tests/compile_fail/object_key_generic.rs
use eure::ObjectKey;

#[derive(ObjectKey)]
enum Bad<T> {
    A,
    B,
}

fn main() {}
