crates/eure-macros/tests/compile_fail/object_key_generic.stderr
error: ObjectKey does not support generic enums
 --> tests/compile_fail/object_key_generic.rs:4:10
  |
4 | enum Bad<T> {
  |          ^

error[E0392]: type parameter `T` is never used
 --> tests/compile_fail/object_key_generic.rs:4:10
  |
4 | enum Bad<T> {
  |          ^ unused type parameter
  |
  = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
  = help: if you intended `T` to be a const parameter, use `const T: /* Type */` instead
